# DHBW_electrolyzer_rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
dynamics/: Cargo.toml
src/: electrolyzer.rs  main.rs  modbus_device.rs  register.rs
