[package]
name = "dhbw_electrolyzer_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-modbus = { version = "*", default-features = false, features = ["tcp-sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
influxdb = { version = "0.7.2", features = ["derive"] }
chrono = "0.4.38"
