[package]
name = "dhbw_electrolyzer_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-modbus = { version = "0.13.1", default-features = false, features = ["tcp-sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
influxdb = { version = "0.7.2", features = ["derive"] }
chrono = "0.4.38"
log = "0.4.21"
env_logger = "0.11.3"
clap = { version = "4.5.8", features = ["derive", "env"] }
backoff = "0.4.0"
metrics-exporter-prometheus = { version = "0.15.1", features = ["push-gateway"] }
metrics = "0.23.0"
metrics-util = "0.17.0"
